# planner

./: .gitignore  CLAUDE.md  Cargo.toml  Dioxus.toml  LICENSE  README.md
.claude/agents/: rust-expert-reviewer.md
.githooks/: pre-commit
.github/workflows/: ci.yml
assets/styling/: main.css  theme.css
crates/planner-app/: Cargo.toml
crates/planner-app/assets/styling/: main.css  theme.css
crates/planner-app/src/: main.rs  plan_io.rs  state.rs
crates/planner-app/src/components/: mod.rs
crates/planner-app/src/components/layout/: top_nav.rs
crates/planner-app/src/components/ui/: assign_project_modal.rs  badge.rs  button.rs  color_picker.rs  confirmation_dialog.rs  floating_fab.rs  floating_project_panel.rs  grid_cell.rs  input.rs  roadmap_project_modal.rs  team_member_modal.rs  technical_project_modal.rs
crates/planner-app/src/components/views/: allocation_view.rs  grid_helpers.rs  mod.rs  paintbrush.rs  roadmap_view.rs  technical_view.rs
crates/planner-app/src/storage/: mod.rs
crates/planner-core/: Cargo.toml
crates/planner-core/src/: lib.rs
crates/planner-core/src/models/: plan.rs  plan_export.rs  plan_state.rs  status.rs
crates/planner-core/src/utils/: mod.rs
docs/: component-reference.md  grid-architecture.md  mockup.html  roadmap.md  roadmap.md.backup  state-management.md  ui-design.md
docs/adrs/: ADR-001-design-system-structure.md  ADR-002-state-management.md  ADR-003-grid-layout.md  ADR-004-dark-mode-design-principles.md  ADR-004-state-persistence.md  ADR-005-state-persistence.md  ADR-006-workspace-structure.md
src/: lib.rs  main.rs  plan_io.rs  state.rs
src/components/layout/: mod.rs  top_nav.rs
src/components/ui/: assign_project_modal.rs  badge.rs  button.rs  color_picker.rs  context_menu.rs  data_table.rs  floating_project_panel.rs  grid_cell.rs  keybindings_overlay.rs  mod.rs  roadmap_project_modal.rs  settings_modal.rs  split_modal.rs  team_member_modal.rs  technical_project_modal.rs
src/components/views/: allocation_view.rs  grid_helpers.rs  mod.rs  paintbrush.rs  roadmap_view.rs  technical_view.rs
src/models/: mod.rs  plan.rs  plan_export.rs  plan_state.rs  preferences.rs
src/storage/: mod.rs
src/utils/: date_helpers.rs
