[package]
name = "planner"
version = "0.1.0"
authors = ["Matthew Emerson <emersonmde@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# WASM-only dependencies
[target.'cfg(target_family = "wasm")'.dependencies]
uuid = { version = "1.0", features = ["js"] }  # JS feature for wasm UUID generation
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "Document",
    "Element",
    "HtmlInputElement",
    "FileList",
    "File",
    "FileReader",
    "console",
    "Navigator",
    "Clipboard",
    "Location",
    "History",
    "Url",
    "UrlSearchParams",
    "KeyboardEvent"
] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

# Desktop-only dependencies
[target.'cfg(not(target_family = "wasm"))'.dependencies]
dirs = "6.0"
rfd = "0.15"
arboard = "3.4"
base64 = "0.22"

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
