[workspace]
resolver = "2"
members = [
    "crates/planner-core",
    "crates/planner-app",
]

[workspace.dependencies]
dioxus = { version = "0.7.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Workspace crates
planner-core = { path = "crates/planner-core" }
