[package]
name = "planner-core"
version = "0.1.0"
edition = "2021"
description = "Core models and utilities for the Quarterly Planner"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
# For test assertions
